tests/negative/regression/r11.orng
// r11.orng:6:12: error: expected a value of type `(data: [*]String, length: Int)`, got a value of type `(???, ???, ???)`
//     let (a, b, c): []String
//           ^
// 
fn main()->() {
    let (a, b, c): []String
}